--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -10,7 +10,7 @@
     <%- include("partials/navbar"); -%>
 
 
-      <div class="gen">
+      <div class="genn">
         <% maestros.forEach(maestro=> { %>
           <div class="profile-card">
             <div class="profile-icon">
